Fixed whitespace issue near footer on bigger screens

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,5 @@
 
 .page {
   margin-top: 63px;
-  min-height: 100vh;
-  
+  min-height: 90vh;
 }
