--- a/src/components/pages/Home.css
+++ b/src/components/pages/Home.css
@@ -1,7 +1,6 @@
-
 .intro {
   background-image: url(../../assests/img/home.jpg);
-  height: 100%;
+  max-height: 100vh;
   /* width: 100%; */
   background-size: cover;
   background-position: center;
@@ -28,7 +27,7 @@
   grid-column: 2 / 3;
   margin: 1em auto 2em;
   padding: 10px;
-  font-family: 'Roboto Slab', serif;
+  font-family: "Roboto Slab", serif;
   font-size: 1em;
   border: 2px solid white;
   color: white;
@@ -44,7 +43,9 @@
   cursor: pointer;
 }
 
-button:focus {outline:0;}
+button:focus {
+  outline: 0;
+}
 
 .logo {
   width: 250px;
@@ -53,23 +54,21 @@ button:focus {outline:0;}
   font-size: 3em;
   text-align: center;
   padding-top: -50%;
-  font-family: 'Abril Fatface', cursive;
-
+  font-family: "Abril Fatface", cursive;
 }
 
 .logo::after {
-  content: '';
+  content: "";
   display: block;
   background-color: white;
   height: 2px;
   width: 250px;
-  margin: .5em auto;
+  margin: 0.5em auto;
 }
-
 
 .introText {
   grid-column: 2 / 3;
   margin: 0 30px 1em;
-  font-family: 'Roboto Slab', serif;
+  font-family: "Roboto Slab", serif;
   text-align: center;
 }
